# cdiscountapi

./: .gitignore  .konchrc  .projections.json  LICENSE  Makefile  README.md  config.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
cdiscountapi/: __init__.py  cdiscountapi.py  config.py  exceptions.py  helpers.py
cdiscountapi/assets/: config.yaml  offer.json
cdiscountapi/sections/: __init__.py  base.py  discussions.py  fulfillment.py  offers.py  orders.py  products.py  relays.py  sandbox.py  seller.py  webmail.py
cdiscountapi/templates/: Offers.xml  Products.xml
cdiscountapi/tests/: __init__.py  conftest.py  test_base.py  test_connection.py  test_discussions.py  test_fulfillments.py  test_generate_packages.py  test_helpers.py  test_history.py  test_offers.py  test_orders.py  test_packages.py  test_products.py  test_products_info.py  test_relays.py  test_seller.py  test_user_info.py  test_webmail.py
cdiscountapi/tests/cassettes/: test_get_all_model_list.yaml  test_get_brand_list.yaml  test_get_model_list.yaml  test_get_offer_list_without_offers.yaml  test_get_product_list.yaml  test_get_product_list_by_identifier.yaml  test_get_product_package_product_matching_file_data.yaml  test_get_product_package_submission_result.yaml  test_get_seller_indicators.yaml  test_get_seller_info.yaml  test_initialization.yaml  test_initialization_with_invalid_credentials.yaml  test_token.yaml
cdiscountapi/tests/samples/: Offers.xml
docs/: CHANGELOG.rst  advanced_usage.rst  api.rst  conf.py  cookbook.rst  error_codes.json  index.rst  property_codes.json  quickstart.rst
docs/_build/doctrees/: CHANGELOG.doctree  advanced_usage.doctree  api.doctree  cookbook.doctree  environment.pickle  index.doctree  quickstart.doctree
docs/_build/html/: .buildinfo  CHANGELOG.html  advanced_usage.html  api.html  cookbook.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
offer_package/: [Content_Types].xml
offer_package/_rels/: .rels
product_package/: [Content_Types].xml
product_package/_rels/: .rels
tests/: __init__.py  conftest.py  test_base.py  test_connection.py  test_discussions.py  test_fulfillments.py  test_helpers.py  test_history.py  test_offers.py  test_orders.py  test_packages.py  test_products.py  test_relays.py  test_webmail.py
(+185 files in other folders)
