[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "cdiscountapi"
author = "ZIBOURA Mathilde, RABOIS Damien"
author-email = "mathilde.ziboura@abc-culture.fr"
classifiers = ["License :: OSI Approved :: MIT License"]

requires = [ 
    "requests==2.22.0",
    "requests_mock==1.7.0",
    "zeep==3.4.0",
    "dicttoxml==1.7.4",
    "PyYAML==5.1.2",
]

requires-python = ">=3.6"

[tool.flit.metadata.requires-extra]
test = [
    "pytest==5.2.0",
    "vcrpy==2.1.0",
    "pytest-vcr==1.0.2",
    "coverage==4.5.4",
    "pytest-cov==2.7.1",
]
dev = [
    "pdbpp",
    "ipython",
    "konch",
]
doc = ["sphinx", "sphinx-nameko-theme"]

[tool.black]
line-length = 88
