[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "cdiscountapi"
author = "ZIBOURA Mathilde, RABOIS Damien"
author-email = "mathilde.ziboura@abc-culture.fr"
classifiers = ["License :: OSI Approved :: MIT License"]

requires = [ 
    "requests==2.25.1",
    "requests_mock==1.8.0",
    "zeep==4.0.0",
    "dicttoxml==1.7.4",
    "PyYAML==5.4.1",
    "jinja2==2.11.1",
]

requires-python = ">=3.6"

[tool.flit.metadata.requires-extra]
test = [
    "pytest==6.2.2",
    "vcrpy==4.1.1",
    "pytest-vcr==1.0.2",
    "coverage==5.4",
    "pytest-cov==2.11.1",
]
dev = [
    "pdbpp",
    "ipython",
    "konch",
    "pandas",
]
doc = ["sphinx", "sphinx-nameko-theme"]

[tool.black]
line-length = 120
